# alignability-prediction

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
alignability_prediction/include/: alignability_prediction.h
dataset/: LICENSE.md
dataset/ceiling/: 0.ply  1.ply  10.ply  11.ply  12.ply  13.ply  2.ply  3.ply  4.ply  5.ply  6.ply  7.ply  8.ply  9.ply
dataset/robot/f1/r1/: 0.ply  1.ply  2.ply
dataset/robot/f1/r2/: 0.ply  1.ply  2.ply
dataset/robot/f1/r3/: 0.ply  1.ply  2.ply
dataset/robot/f10/r1/: 0.ply  1.ply  2.ply
dataset/robot/f10/r2/: 0.ply  1.ply  2.ply
dataset/robot/f10/r3/: 0.ply  1.ply  2.ply
dataset/robot/f11/r1/: 0.ply  1.ply  2.ply
dataset/robot/f11/r2/: 0.ply  1.ply  2.ply
dataset/robot/f11/r3/: 0.ply  1.ply  2.ply
dataset/robot/f12/r1/: 0.ply  1.ply  2.ply
dataset/robot/f12/r2/: 0.ply  1.ply  2.ply
dataset/robot/f12/r3/: 0.ply  1.ply  2.ply
dataset/robot/f13/r1/: 0.ply  1.ply  2.ply
dataset/robot/f13/r2/: 0.ply  1.ply  2.ply
dataset/robot/f13/r3/: 0.ply  1.ply  2.ply
dataset/robot/f14/r1/: 0.ply  1.ply  2.ply
dataset/robot/f2/r1/: 0.ply  (+2 more)
demo/: CMakeLists.txt  demo_alignability_prediction.cpp  demo_point_cloud_visualizer.cpp
jupyter/: alignability_prediction.ipynb
models/: model_alignability_prediction.joblib
results/: overlap.csv  results_raw.csv
results/top_percentage_preprocessed/: 10.csv  100.csv  20.csv  30.csv  40.csv  50.csv  60.csv  70.csv  80.csv  90.csv
results/top_percentage_raw/: 10.csv  100.csv  20.csv  30.csv  40.csv  50.csv  60.csv  70.csv  80.csv  90.csv
scripts/: alignability_prediction.py
(+235 files in other folders)
